--- a/clone_sale.html
+++ b/clone_sale.html
@@ -16,8 +16,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-     <!-- Easy-autocomplete -->
-     <script src="js/jquery.autocomplete.js"></script>     
+    <link href="css/magicsuggest-min.css" rel="stylesheet">
+    <script src="js/magicsuggest-min.js"></script>
 
     <!-- Sidbar -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
@@ -485,22 +485,11 @@
 
         setTimeout(function() {$("#cus").focus();}, 100);
 
-        var name = $('#name').val();
-       $("#name").autocomplete({
-            minChars: 3,
-            showNoSuggestionNotice: true,
-            noSuggestionNotice: "no results",
-            lookup: function(name, done) {
-                $.ajax({
-                type: "POST",               
-                url: "http://150.95.26.163:8080/gitmew/php/search.php",
-                data: {'phrase' : name },
-                success: function(data) {
-                    console.log(data);
-                }
-                });
-            }
-            });
+        $('#name').magicSuggest({
+            data: 'http://150.95.26.163:8080/gitmew/php/search.php',
+            valueField: 'prod_id',
+            displayField: 'prod_name'
+        });
 
         var options_cus = {
 
