--- a/sale.html
+++ b/sale.html
@@ -941,11 +941,11 @@
                       "<div class='txt-ct'>PPS AUTO GROUP " + b_name + "</div>" +
                       "<div class='txt-ct'>" + data + "</div>" +
                       "<div class='txt-ct'>" + datetime + "</div>" +
-                      "<div class='txt-left'>ผู้บันทึก : สมศร หมอนข้าง</div>" +
-                      "<div class='txt-right'>ลูกค้า : สมพร หมอนหนุน</div>" +
+                      "<div class='txt-left'>ผู้บันทึก :" + localStorage.name + "</div>" +
+                      "<div class='txt-right'>ลูกค้า :" + cus_name + "</div>" +
                       "<hr style='width: 80%;'>" +
 
-                      "+text+"+
+                      ""+text+""+
 
                       "<hr style='width: 80%;'>" +
 
