--- a/sale.html
+++ b/sale.html
@@ -945,7 +945,7 @@
                       "<div class='txt-right'>ลูกค้า : สมพร หมอนหนุน</div>" +
                       "<hr style='width: 80%;'>" +
 
-                      "+text+"+
+                      ""+text+""+
 
                       "<hr style='width: 80%;'>" +
 
