--- a/manage_bill.html
+++ b/manage_bill.html
@@ -116,7 +116,7 @@
                                     "<span id='span-" + i + "' hidden>" + field.order_id + "</span>"+
                                     "<div class='row' style='margin-left: 10px;'>"+
                                     "<div class='col-2 text-center no-pd' style='margin-right: 16px;'>"+
-                                    "<div class='input-group-prepend'>"
+                                    "<div class='input-group-prepend'>"+
                                     "<span class='input-group-text' style='margin-right: 16px;'>" + (i + 1) + "</span>"+
                                     "<input id=bill_no-"+i+"'' type='text' class='form-control text-center' value='"+field.order_number+"' disabled>"+
                                     "</div>"+
