--- a/cash_record.html
+++ b/cash_record.html
@@ -35,10 +35,85 @@
     <link href="css/untitled.css" rel="stylesheet">
 
     <script>
+        var datetime
         $(document).ready(function () {
+            $.ajax({
+                url:"http://150.95.26.163:8080/gitmew/php/get_branch.php",
+                method:"GET",
+                success:function(data)
+                {
+                    var obj = jQuery.parseJSON(data);
+                    $.each(obj, function(i, field){
+                        $('#branch').append("<option class='dropdown-item text-center' style='color: #ffffff' value='"+field.branch_id+"'>"+field.branch_name+"</option>");
+                    });
+                }
+            }); 
+           
+            $.ajax({
+                url:"http://150.95.26.163:8080/gitmew/php/get_cash.php",
+                method:"POST",
+                data:{'b_id':"1"},
+                success:function(data)
+                {
+                    var obj = jQuery.parseJSON(data);
+                    console.log(obj);
+                    $.each(obj, function(i, field){
+                        $('#cash').text(parseFloat(field.total_price).toFixed(2) + " บาท");
+                    });
+                }
+            });      
+
             var d = new Date($.now());
             $('#date').text(d.getDate() + "/" + (d.getMonth() + 1) + "/" + d.getFullYear());
+            datetime = d.getFullYear() + "-" + (d.getMonth()+1) + "-" + d.getDate() + " " + d.getHours() + ":" + d.getMinutes() + ":" + d.getSeconds();
+            $('#user').text(localStorage.name);
+            $('#say_hi').text("สวัสดี, คุณ " +localStorage.name);
         });
+
+        function get_cash(){
+            var b_id = $('#branch option:selected').val();
+           // alert(b_id);
+            $.ajax({
+                url:"http://150.95.26.163:8080/gitmew/php/get_cash.php",
+                method:"POST",
+                data:{'b_id':b_id},
+                success:function(data)
+                {
+                    var obj = jQuery.parseJSON(data);
+                    console.log(obj);
+                    $.each(obj, function(i, field){                      
+                        $('#cash').text(parseFloat(field.total_price).toFixed(2) + " บาท");
+                    });
+                }
+            });    
+        }
+
+        function cash_rec(){
+            var b_id = $('#branch option:selected').val();
+            var arr = $('#cash').html().split(" ");
+            var total = arr[0];
+            $.ajax({
+                url:"http://150.95.26.163:8080/gitmew/php/add_cash.php",
+                method:"POST",
+                data:{'b_id':b_id,
+                      'user_id':localStorage.user_id,
+                      'date':datetime,
+                      'total':total},
+                success:function(data)
+                {
+                    if(data == "success"){
+                        window.location = "sale.html";
+                    }
+                }
+            });    
+        }
+
+        /*var b_id = 1;
+        function setbranch(arg){
+            b_id = arg;
+            var b = $('#li-branch-'+arg).text()
+            $("#branch").text(b);
+        }*/
     </script>
 
     <style>
@@ -90,15 +165,17 @@
 
             <div class="container justify-content-center">
                     <div class="jumbotron text-center" style="background: #fdfcfb;">
-                        <h1 class="display-4">สวัสดี, คุณ admin</h1>
+                        <h1 id="say_hi" class="display-4"></h1>
                         <h3 style="margin-top: 55px;">สรุปยอดเงินในกะ</h3>
                         <hr style="width: 80%">
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-6 text-right" style="padding-right: 50px;">
                                 <h4>สาขา : </h4>
                             </div>
-                            <div class="col-5 text-left">
-                                <h4 id='branch' style="letter-spacing: 2px;">อ่างทอง</h4>
+                            <div class="col-5 text-left">                                
+                                <select id="branch" onchange="get_cash()" type="button" style="letter-spacing: 2px;" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              
+                                </select>
                             </div>
                         </div>
                         <div class="row" style="margin-bottom: 10px;">
@@ -114,7 +191,7 @@
                                 <h4>ผู้บันทึก : </h4>
                             </div>
                             <div class="col-5 text-left">
-                                <h4 id='user' style="letter-spacing: 2px;">admin</h4>
+                                <h4 id='user' style="letter-spacing: 2px;"></h4>
                             </div>
                         </div>
                         <div class="row" style="margin-bottom: 25px;">
@@ -127,7 +204,7 @@
                         </div>
                         <div class="row" >
                             <div class="col-12 text-center">
-                                <button class="btn btn-lg btn-danger" style="width: 20%;">
+                                <button class="btn btn-lg btn-danger" style="width: 20%;" onclick="cash_rec()">
                                     ตัดกะ
                                 </button>
                             </div>
