--- a/manage_bill.html
+++ b/manage_bill.html
@@ -814,7 +814,7 @@
 
         function bill_detail(arg){
             var order_id = $('#span-'+arg).html();
-            window.location = "bill_info?order="+order_id;
+            window.location = "bill_info.html?order="+order_id;
         }
     </script>
 </head>
