--- a/bill_info.html
+++ b/bill_info.html
@@ -265,25 +265,25 @@
                             <h5 style="margin-top: 2%;">PPS AUTO GROUP</h5>
                         </div>
                         <div class="col-3 text-left">
-                            <input id="input-branch" type="text" class="form-control text-center" value="อ่างทอง">
+                            <h5 id="input-branch"></h5>
                         </div>
                     </div>
                     
                     <h5  id="input-number" style="margin-top: 15px;">S18-00018</h5>
-                    <h5 id='date' style="letter-spacing: 2px;"></h5>
+                    <h5 id='input-date' style="letter-spacing: 2px;"></h5>
                     <div class="row" style="margin-bottom: 5px;">
                         <div class="col-1"></div>
                         <div class="col-2 text-left">
                             <h5 style="margin-top: 5%;">ผู้บันทึก : </h5>
                         </div>
                         <div class="col-2 text-left no-pd">
-                            <input id="input-user" type="text" class="form-control text-center" value="somjeed">
+                            <h5 id="input-user"></h5>
                         </div>
                         <div class="col-2 text-right">
                             <h5 style="margin-top: 5%;">ลูกค้า : </h5>
                         </div>
                         <div class="col-5 text-left no-pd">
-                            <input id="input-cus" type="text" class="form-control text-center" value="ร้านศ.ไดนาโม(พี่สาวพี่เหน๋อ)">
+                            <h5 id="input-cus"></h5>
                         </div>
                     </div>
                     <hr style="width: 80%">
@@ -292,13 +292,16 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-1"></div>
                             <div class="col-5 text-left" style="padding-right: 0px;">
-                                <input id="input-prod-1" type="text" class="form-control text-left" value="ชื่อสินค้า 1">
+                                <h5 id="input-prod-1">product1</h5>
                             </div>
-                            <div class="col-5">
-                                <input id="input-price-1" type="text" class="form-control text-right" value="999 x">
+                            <div class="col-2 text-right">
+                                <h5 id="input-price-1">999</h5>
                             </div>
-                            <div class="col-5 text-right">
-                                <input id="input-price-1" type="text" class="form-control text-right" value="3">
+                            <div class="col-1 text-right">
+                                <h5 id="input-price-1">x</h5>
+                            </div>
+                            <div class="col-2 text-right">
+                                <input id="input-amt-1" type="text" class="form-control text-right" value="3">
                             </div>
                             <div class="col-1"></div>
                         </div>                     
@@ -312,7 +315,7 @@
                             <h5>รวม</h5>
                         </div>
                         <div class="col-3 text-right no-pd">
-                            <input id="input-sum" type="text" class="form-control text-right" value="999999" readonly>
+                            <h5 id="input-sum"></h5>
                         </div>
                     </div>
                     <div class="row" style="margin-bottom: 5px;">
@@ -330,7 +333,7 @@
                             <h5>สุทธิ</h5>
                         </div>
                         <div class="col-3 text-right no-pd">
-                            <input id="input-total" type="text" class="form-control text-right" value="99999" readonly>
+                            <h5 id="input-total"></h5>
                         </div>
                     </div>
                     <div class="row" style="margin-bottom: 5px;">
@@ -348,7 +351,7 @@
                             <h5>ทอน</h5>
                         </div>
                         <div class="col-3 text-right no-pd">
-                            <input id="input-change" type="text" class="form-control text-right" value="5000" readonly>
+                            <h5 id="input-change"></h5>
                         </div>
                     </div>
                     <div class="row">
