--- a/bill_info.html
+++ b/bill_info.html
@@ -180,16 +180,16 @@
                     <div class="row" style="margin-bottom: 5px;">
                         <div class="col-1"></div>
                         <div class="col-2 text-left">
+                            <h5>ลูกค้า : </h5>
+                        </div>
+                        <div class="col-4 text-left no-pd">
+                            <h5 id='cus'></h5>
+                        </div>
+                        <div class="col-2 text-right">
                             <h5>ผู้บันทึก : </h5>
                         </div>
                         <div class="col-2 text-left no-pd">
                             <h5 id='user'></h5>
-                        </div>
-                        <div class="col-2 text-right">
-                            <h5>ลูกค้า : </h5>
-                        </div>
-                        <div class="col-5 text-left no-pd">
-                            <h5 id='cus'></h5>
                         </div>            
 
                     </div> 
@@ -274,16 +274,16 @@
                     <div class="row" style="margin-bottom: 5px;">
                         <div class="col-1"></div>
                         <div class="col-2 text-left">
+                            <h5 style="margin-top: 5%;">ลูกค้า : </h5>
+                        </div>
+                        <div class="col-4 text-left no-pd">
+                            <h5 id="input-cus"></h5>
+                        </div>
+                        <div class="col-2 text-right">
                             <h5 style="margin-top: 5%;">ผู้บันทึก : </h5>
                         </div>
                         <div class="col-2 text-left no-pd">
                             <h5 id="input-user"></h5>
-                        </div>
-                        <div class="col-2 text-right">
-                            <h5 style="margin-top: 5%;">ลูกค้า : </h5>
-                        </div>
-                        <div class="col-5 text-left no-pd">
-                            <h5 id="input-cus"></h5>
                         </div>
                     </div>
                     <hr style="width: 80%">
@@ -294,10 +294,10 @@
                             <div class="col-5 text-left" style="padding-right: 0px;">
                                 <h5 id="input-prod-1">product1</h5>
                             </div>
-                            <div class="col-2 text-right">
+                            <div class="col-2 text-right" style="padding-top: 10px;">
                                 <h5 id="input-price-1">999</h5>
                             </div>
-                            <div class="col-1 text-right">
+                            <div class="col-1 text-right" style="padding-top: 10px;">
                                 <h5 id="input-price-1">x</h5>
                             </div>
                             <div class="col-2 text-right">
@@ -315,12 +315,12 @@
                             <h5>รวม</h5>
                         </div>
                         <div class="col-3 text-right no-pd">
-                            <h5 id="input-sum"></h5>
+                            <h5 id="input-sum">1</h5>
                         </div>
                     </div>
                     <div class="row" style="margin-bottom: 5px;">
                         <div class="col-3"></div>
-                        <div class="col-4 text-left" style="padding-right: 0px;">
+                        <div class="col-4 text-left col-lg-offset-1" style="padding-right: 0px; padding-top: 5px;">
                             <h5>ลด</h5>
                         </div>
                         <div class="col-3 text-right no-pd">
@@ -333,12 +333,12 @@
                             <h5>สุทธิ</h5>
                         </div>
                         <div class="col-3 text-right no-pd">
-                            <h5 id="input-total"></h5>
+                            <h5 id="input-total">1</h5>
                         </div>
                     </div>
                     <div class="row" style="margin-bottom: 5px;">
                         <div class="col-3"></div>
-                        <div class="col-4 text-left" style="padding-right: 0px;">
+                        <div class="col-4 text-left" style="padding-right: 0px; padding-top: 5px;">
                             <h5>รับ</h5>
                         </div>
                         <div class="col-3 text-right no-pd">
@@ -351,7 +351,7 @@
                             <h5>ทอน</h5>
                         </div>
                         <div class="col-3 text-right no-pd">
-                            <h5 id="input-change"></h5>
+                            <h5 id="input-change">1</h5>
                         </div>
                     </div>
                     <div class="row">
