--- a/manage_bill.html
+++ b/manage_bill.html
@@ -209,7 +209,7 @@
                                         $.alert({
                                             icon: 'fa fa-warning',
                                             title: 'เตือน',
-                                            content: 'รายการสินได้ถูกลบแล้ว',
+                                            content: 'รายการสินค้าได้ถูกลบแล้ว',
                                         });
                                         $("#item-" + arg).remove();
                                     } else {
