--- a/bill_info.html
+++ b/bill_info.html
@@ -377,9 +377,9 @@
                 <div class="jumbotron text-center" style="background: #fdfcfb; padding: 20px; ">
                     <div class="row">
                         <div class="col-7 text-right">
-                            <h5 style="margin-top: 2%;">PPS AUTO GROUP</h5>
+                            <h5>PPS AUTO GROUP</h5>
                         </div>
-                        <div class="col-3 text-left">
+                        <div class="col-4 text-left no-pd">
                             <h5 id="input-branch"></h5>
                         </div>
                     </div>
