--- a/sale.html
+++ b/sale.html
@@ -952,19 +952,19 @@
                       "<hr style='width: 80%; border-bottom: 1px dashed; border-top: none;'>" +
 
                       "<div class='txt-left'>รวม</div>" +
-                      "<div class='txt-right'>3000</div>" +
+                      "<div class='txt-right'>"+sum_price+"</div>" +
 
                       "<div class='txt-left'>ลด</div>" +
-                      "<div class='txt-right'>200</div>" +
+                      "<div class='txt-right'>"+ discount+"</div>" +
 
                       "<div class='txt-left'>สุทธิ</div>" +
-                      "<div class='txt-right'>2800</div>" +
+                      "<div class='txt-right'>"+ final_price+"</div>" +
 
                       "<div class='txt-left'>รับ</div>" +
-                      "<div class='txt-right'>3000</div>" +
+                      "<div class='txt-right'>"+ get_money+"</div>" +
 
                       "<div class='txt-left'>ทอน</div>" +
-                      "<div class='txt-right'>200</div>" +
+                      "<div class='txt-right'>"+ change_money+"</div>" +
                       "</div>");
                     WinPrint.document.close();
                     WinPrint.focus();
