--- a/sale.html
+++ b/sale.html
@@ -433,6 +433,12 @@
         }
       });
 
+      $('#discount-money').on("keyup input", function(){
+        var discount = $('#discount-money').val();
+        var net = $('#final-price').val();
+        $('#final-price').val(net - discount);
+      });
+
       var modal = false;
       $('#myModal').on('shown.bs.modal', function() {
         $('#get-money').focus();
